@@ -3,3 +3,6 @@
 * Fix one variable
 * Round the kdr
 * The title can now be longer than 16 characters. You can now make title that have up to 32 characters
+* Faster updates
+* Adding alias for sb:toggle (sidebar hide) and sb:reload (sidebar reload)
+* Add Heroes support
